module2-assignment/css/styles.css
/********** Base styles **********/
 * {
    box-sizing: border-box;
   }

h1 {
    text-align: center;
    font-family: Arial, Helvetica, sans-serif;
    margin-top:40px;
    margin-bottom: 50px;
   }
  
 p {
    width: 90%;
    height: 220px;
    font-family: Helvetica;
    color: black;
    
   }
 
  /* Simple Responsive Framework. */
  .row {
    width: 100%;
   }

   .container {
       position: relative;
       margin-bottom: 15px;
       margin-left:15px;
   }

   .section-title{
       position: absolute;
       top: 0px;
       right:0px;
       text-align: center;
       width : 120px;
       border: 1px solid black;
   }

   #beef.section-title {
       background-color: #c9271e;
       color:white;
   }

   #chicken.section-title {
    background-color: #ffb8b8;
   }

   #sushi.section-title {
    background-color: #90f542;
   }

   p.section-text{
       position: relative;
       left: 10px;
       top : 40px;
   }

  /********** Desktop View **********/
  @media (min-width: 992px) {
    .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
      float: left;
      border: 1px solid black;
      background-color: #ffddcc;
      
    }
    .col-lg-1 {
      width: 8.33%;
    }
    .col-lg-2 {
      width: 16.66%;
    }
    .col-lg-3 {
      width: 25%;
    }
    .col-lg-4 {
      width: 30%; /*Changed this value because of layout problems when using left margin*/
    }
    .col-lg-5 {
      width: 41.66%;
    }
    .col-lg-6 {
      width: 50%;
      
    }
    .col-lg-7 {
      width: 58.33%;
    }
    .col-lg-8 {
      width: 66.66%;
    }
    .col-lg-9 {
      width: 74.99%;
    }
    .col-lg-10 {
      width: 83.33%;
    }
    .col-lg-11 {
      width: 91.66%;
    }
    .col-lg-12 {
      width: 100%;
    }
  }
  
  /********** Tablet View **********/
  @media (min-width: 768px) and (max-width: 991px) {
    .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
      float: left;
      border: 1px solid black;
      background-color: #ffddcc;
      
    }
    .col-md-1 {
      width: 8.33%;
    }
    .col-md-2 {
      width: 16.66%;
    }
    .col-md-3 {
      width: 25%;
    }
    .col-md-4 {
      width: 33.33%;
      
    }
    .col-md-5 {
      width: 41.66%;
    }
    .col-md-6 {
      width: 45%; /*Changed this value because of layout problems when using left margin*/
    }
    .col-md-7 {
      width: 58.33%;
    }
    .col-md-8 {
      width: 66.66%;
    }
    .col-md-9 {
      width: 74.99%;
    }
    .col-md-10 {
      width: 83.33%;
    }
    .col-md-11 {
      width: 91.66%;
    }
    .col-md-12 {
      width: 100%;
    }
  }

  /********** Mobile View **********/
 @media (max-width: 767px){
    .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
        float: left;
        border: 1px solid black;
        background-color: #ffddcc;
      }
      .col-sm-1 {
        width: 8.33%;
      }
      .col-sm-2 {
        width: 16.66%;
      }
      .col-sm-3 {
        width: 25%;
      }
      .col-sm-4 {
        width: 33.33%;
      }
      .col-sm-5 {
        width: 41.66%;
      }
      .col-sm-6 {
        width: 50%;
      }
      .col-sm-7 {
        width: 58.33%;
      }
      .col-sm-8 {
        width: 66.66%;
      }
      .col-sm-9 {
        width: 74.99%;
      }
      .col-sm-10 {
        width: 83.33%;
      }
      .col-sm-11 {
        width: 91.66%;
      }
      .col-sm-12 {
        width: 100%;
      }
 } 
  

